Don't recurse into symlinks when counting directory contents

Symlink contents should not be visited for the purpose of displaying sizes.
Not only is potentially misleading because the storage is actually used
elsewhere (the target location), it can be completely wrong as contents can
be visited multiple times, even recursively.

BUG: 434125
(cherry picked from commit 491068a4405f93ce66d4f49fa5ba5dee29e9546b)